roles/app.kubernetes/templates/k8s-metric-server.yml
---
apiVersion: v1
kind: Service
metadata:
  name: metrics-server
  namespace: kube-system
  labels:
    kubernetes.io/name: "Metrics-server"
spec:
  selector:
    k8s-app: metrics-server
  ports:
    - port: 443
      protocol: TCP
      targetPort: 443
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: metrics-server
  namespace: kube-system
  labels:
    k8s-app: metrics-server
spec:
  selector:
    matchLabels:
      k8s-app: metrics-server
  template:
    metadata:
      name: metrics-server
      labels:
        k8s-app: metrics-server
    spec:
      serviceAccountName: metrics-server
      containers:
        - name: metrics-server
          image: gcr.io/google_containers/metrics-server-amd64:v0.2.1
          imagePullPolicy: Always
          command:
            - /metrics-server
            - --source=kubernetes.summary_api:''
          resources:
            requests:
              cpu: 20m
              memory: 200Mi
            limits:
              cpu: 100m
              memory: 500Mi
