roles/app.kubernetes/templates/k8s-centralized-logging-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: logging-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - nginx-ingress-prod.eastus.cloudapp.azure.com
    secretName: casecret
  rules:
  - host: nginx-ingress-prod.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana-logging
          servicePort: 5601
